Attempted fixing white space on Sawcor Website.

--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,10 @@ html
 
 body
 { font: normal .80em 'trebuchet ms', arial, sans-serif;
+  margin: 0px;
+  padding: 0px;
+  width: 100%;
+  height: 100%;
   background: #FFFFFF;
   color: #555;}
 
@@ -98,6 +102,9 @@ ol li
 #header
 { background: url(pattern.png) repeat;
   border-bottom: 2px solid #E7746F;
+  padding: 0px;
+  margin: 0px;
+  overflow-x: visible;
   width: 100%;
   height: 177px;}
 
